Fix overflow-x hidden on safari

--- a/_sass/_burgermenu.scss
+++ b/_sass/_burgermenu.scss
@@ -8,6 +8,7 @@
  *
  * Released on: February 7, 2016
  */
+ html,
 body {
   overflow-x: hidden;
 }
